<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/total_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_file_manager" >
     
    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
        
        <TextView
	        android:id="@+id/tab_video"
	        android:text="@string/video"
	        style="@style/tab_textview"       
	        android:layout_marginLeft="147dp" />
	
	    <TextView
	        android:id="@+id/tab_music"
	        android:text="@string/music"
	        style="@style/tab_textview"	        
	        android:layout_marginLeft="1dp" />
	
	    <TextView
	        android:id="@+id/tab_photo"
	        android:text="@string/photo"
	        style="@style/tab_textview"	
	        android:layout_marginLeft="1dp" />
        
    </LinearLayout>

	<LinearLayout
	    android:id="@+id/pageContainer"
	    android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_marginTop="8dp"
		android:layout_marginLeft="143dp"
		android:layout_marginRight="143dp"
		android:layout_marginBottom="40dp"  >
	    
	</LinearLayout>

</LinearLayout>