<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <com.hybroad.video.VideoView
            android:id="@+id/videoView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true" />

        <SurfaceView
            android:id="@+id/subVideoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000" />

        <RelativeLayout
            android:id="@+id/mediaControllerLayout"
            android:layout_width="fill_parent"
            android:layout_height="102dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:visibility="visible" >

            <View
                android:id="@+id/view"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#50878787"
                android:visibility="invisible" />

            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="fill_parent"
                android:layout_height="102dip"
                android:layout_marginLeft="160.0dp"
                android:layout_marginRight="160.0dp"
                android:background="@drawable/bg_menu_1" >

                <TextView
                    android:id="@+id/forwardRewindTextCue"
                    style="@style/wrap_wrap"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/x_32"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:visibility="invisible" />

                <ImageButton
                    android:id="@+id/play_pause"
                    style="@style/wrap_wrap"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/pause"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20.0dp"
                    android:layout_toRightOf="@id/play_pause"
                    android:text="@string/nototaltime"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <SeekBar
                    android:id="@+id/videoSeekBar"
                    android:layout_width="650dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/timeText"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:max="1000"
                    android:maxHeight="8dp"
                    android:minHeight="8dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_style"
                    android:secondaryProgress="0"
                    android:thumb="@drawable/seekbar_thumb" />

                <TextView
                    android:id="@+id/timetotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="30dp"
                    android:text="@string/nototaltime"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RelativeLayout>

        </RelativeLayout>
    </RelativeLayout>

    <!-- start:video_menu_layout_desk................................................. -->

    <RelativeLayout
        android:id="@+id/video_menu_layout_desk"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/video_menu_layout_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="180.0dp"
            android:layout_marginRight="180.0dp"
            android:background="@drawable/bg_menu_1"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <LinearLayout
                    android:id="@+id/video_play_mode_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/video_play_mode_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/close_auto_play" />

                    <TextView
                        android:id="@+id/video_play_mode_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/closeAutoPlay"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/full_screen_control_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/full_screen_control_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/full_screen" />

                    <TextView
                        android:id="@+id/full_screen_control_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/exit_full_screen"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/switch_subtitle_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/switch_subtitle_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/subtitle" />

                    <TextView
                        android:id="@+id/switch_subtitle_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/switch_subtitle"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/switch_audio_track_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/switch_audio_track_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/audio_track" />

                    <TextView
                        android:id="@+id/switch_audio_track_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/switch_audio_track"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/switch_channel_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/switch_channel_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/video_channel_1" />

                    <TextView
                        android:id="@+id/switch_channel_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/switch_channel"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <!-- end:video_menu_layout_desk................................................. -->

</FrameLayout>