<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/music_current_path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:textColor="#ffffffff"
            android:textSize="20sp"
            android:textIsSelectable="false" />

        <GridView
            android:id="@+id/audio_gridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:numColumns="7"
            android:scrollbarFadeDuration="1000" />
    </LinearLayout>

    <!-- start:music_explore_menu_layout_desk................................................. -->

    <RelativeLayout
        android:id="@+id/music_explore_menu_layout_desk"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:id="@+id/music_explore_menu_layout_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="150.0dp"
            android:layout_marginRight="150.0dp"
            android:background="@drawable/bg_menu_1"
            android:visibility="invisible" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <LinearLayout
                    android:id="@+id/music_sort_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/music_sort_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/sort_by_name" />

                    <TextView
                        android:id="@+id/music_sort_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/sort"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/add_to_favorite_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/add_to_favorite_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_to_favorite" />

                    <TextView
                        android:id="@+id/add_to_favorite_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/add_to_favorite"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>
                
                <LinearLayout
                    android:id="@+id/enter_favorite_menu_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/menu_item_focus_change"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/enter_favorite_menu_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/enter_favorite" />

                    <TextView
                        android:id="@+id/enter_favorite_menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_horizontal"
                        android:text="@string/enter_favorite"
                        android:textColor="#ffffffff"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
    <!-- end:music_explore_menu_layout_desk................................................. -->

</FrameLayout>